<resources>
    <string name="app_name">SpookChats</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>

    <string name="action_signin">Sign In</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="title_account">Account</string>

    <string name="contact_link">Open</string>

    <string name="base_url">https://team8-tcss450-server.herokuapp.com/</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_chat">add chat</string>

</resources>
