<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.messaging_final_project.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="edu.uw.tcss450.messaging_final_project.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.messaging_final_project.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_navigation_contacts_to_navigation_chat"
            app:destination="@id/navigation_chat" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.messaging_final_project.ui.chat.ChatFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.messaging_final_project.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_chat_list"
        android:name="edu.uw.tcss450.messaging_final_project.ui.chat.ChatListFragment"
        android:label="Chats"
        tools:layout="@layout/fragment_chat_list">
        <action
            android:id="@+id/action_navigation_chat_list_to_navigation_chat"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_navigation_chat_list_to_addChatFragment"
            app:destination="@id/navigation_add_chat" />
        <action
            android:id="@+id/action_navigation_chat_list_to_addChatContactFragment"
            app:destination="@id/addChatContactFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_chat"
        android:name="edu.uw.tcss450.messaging_final_project.ui.chat.AddChatFragment"
        android:label="@string/add_chat">
        <action
            android:id="@+id/action_navigation_add_chat_to_navigation_chat_list"
            app:destination="@id/navigation_chat_list" />
    </fragment>
    <fragment
        android:id="@+id/addChatContactFragment"
        android:name="edu.uw.tcss450.messaging_final_project.ui.chat.AddChatContactFragment"
        android:label="add contact to chat">
        <action
            android:id="@+id/action_addChatContactFragment_to_navigation_chat_list"
            app:destination="@id/navigation_chat_list" />
    </fragment>
</navigation>